--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,253 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>MyGitFrontend</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+<!DOCTYPE html>
+<html lang="en" ng-app="studentApp">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Student CRUD & Login</title>
+    <link
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
+    <script src="app.js"></script>
+  </head>
+  <body>
+    <app-root></app-root>
+    <div class="container mt-5" ng-controller="StudentController">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="card mb-4">
+            <div class="card-body">
+              <h5 class="card-title">Add New Student</h5>
+              <form ng-submit="saveStudent()">
+                <div class="form-group">
+                  <label for="stname">Student Name</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="stname"
+                    ng-model="newStudent.stname"
+                    required
+                  />
+                </div>
+                <div class="form-group">
+                  <label for="email">Email</label>
+                  <input
+                    type="email"
+                    class="form-control"
+                    id="email"
+                    ng-model="newStudent.course"
+                    required
+                  />
+                </div>
+                <div class="form-group">
+                  <label for="password">Password</label>
+                  <input
+                    type="password"
+                    class="form-control"
+                    id="password"
+                    ng-model="newStudent.fee"
+                    required
+                  />
+                </div>
+                <button type="submit" class="btn btn-primary">
+                  {{ isEditing ? 'Update Student' : 'Add Student' }}
+                </button>
+                <button
+                  type="button"
+                  class="btn btn-secondary ml-2"
+                  ng-click="resetForm()"
+                  ng-show="isEditing"
+                >
+                  Cancel
+                </button>
+              </form>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6">
+          <div class="card mb-4">
+            <div class="card-body">
+              <h5 class="card-title">Login</h5>
+              <form ng-submit="login()">
+                <div class="form-group">
+                  <label for="loginName">Student Name</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="loginName"
+                    ng-model="loginData.name"
+                    required
+                  />
+                </div>
+                <div class="form-group">
+                  <label for="loginEmail">Email</label>
+                  <input
+                    type="email"
+                    class="form-control"
+                    id="loginEmail"
+                    ng-model="loginData.email"
+                    required
+                  />
+                </div>
+                <div class="form-group">
+                  <label for="loginPassword">Password</label>
+                  <input
+                    type="password"
+                    class="form-control"
+                    id="loginPassword"
+                    ng-model="loginData.password"
+                    required
+                  />
+                </div>
+                <button type="submit" class="btn btn-success">Login</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Students List</h5>
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Actions</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr ng-repeat="student in students">
+                <td>
+                  <input type="checkbox" ng-model="student.completed" ng-change="toggleStatus(student)" />
+                  {{ student.stname }} - <span>{{ student.completed ? 'Completed' : 'Pending' }}</span>
+                </td>
+                <td>{{ student.course }}</td>
+                <td>
+                  <button class="btn btn-warning btn-sm" ng-click="editStudent(student)">
+                    Edit
+                  </button>
+                  <button class="btn btn-danger btn-sm" ng-click="deleteStudent(student.id)">
+                    Delete
+                  </button>
+                </td>
+              </tr>
+            </tbody>
+            
+          </table>
+        </div>
+      </div>
+    </div>
+
+    <script>
+      
+      var app = angular.module("studentApp", []);
+
+      app.controller("StudentController", function ($scope, $http) {
+        $scope.students = [];
+        $scope.newStudent = {};
+        $scope.isEditing = false;
+        $scope.selectedStudentId = null;
+        $scope.loginData = {};
+
+        $scope.getStudents = function () {
+          $http.get("http://localhost:8085/api/student").then(
+            function (response) {
+              if (response.data.status) {
+                $scope.students = response.data.data;
+              }
+            },
+            function (error) {
+              console.error("Error fetching students:", error);
+            }
+          );
+        };
+
+        $scope.saveStudent = function () {
+          if ($scope.isEditing) {
+            $http
+              .put(
+                "http://localhost:8085/api/student/update/" + $scope.selectedStudentId,
+                $scope.newStudent
+              )
+              .then(
+                function (response) {
+                  if (response.data.status) {
+                    $scope.getStudents();
+                    $scope.resetForm();
+                  } else {
+                    alert("Failed to update student!");
+                  }
+                },
+                function (error) {
+                  console.error("Error updating student:", error);
+                }
+              );
+          } else {
+            $http.post("http://localhost:8085/api/student/add", $scope.newStudent).then(
+              function (response) {
+                if (response.data.status) {
+                  $scope.getStudents();
+                  $scope.resetForm();
+                } else {
+                  alert("Failed to add student!");
+                }
+              },
+              function (error) {
+                console.error("Error adding student:", error);
+              }
+            );
+          }
+        };
+
+        $scope.editStudent = function (student) {
+          $scope.isEditing = true;
+          $scope.selectedStudentId = student.id;
+          $scope.newStudent = angular.copy(student);
+        };
+
+        $scope.deleteStudent = function (studentId) {
+          if (confirm("Are you sure you want to delete this student?")) {
+            $http.delete("http://localhost:8085/api/student/delete/" + studentId).then(
+              function (response) {
+                if (response.data.status) {
+                  $scope.getStudents();
+                } else {
+                  alert("Failed to delete student!");
+                }
+              },
+              function (error) {
+                console.error("Error deleting student:", error);
+              }
+            );
+          }
+        };
+
+        $scope.resetForm = function () {
+          $scope.newStudent = {};
+          $scope.isEditing = false;
+          $scope.selectedStudentId = null;
+        };
+
+        $scope.login = function () {
+          var found = $scope.students.find(
+            student =>
+              student.stname === $scope.loginData.name &&
+              student.course === $scope.loginData.email &&
+              student.fee === $scope.loginData.password
+          );
+          if (found) {
+            alert("Login successful! User Email: " + found.course);
+          } else {
+            alert("Invalid Name, Email, or Password!");
+          }
+        };
+
+        $scope.getStudents();
+      });
+    </script>
+  </body>
 </html>
